tests/error/modifier_errors/higher_order_flag_mismatch1.err
Error: Unitary flag mismatch (at $FILE:17:16)
   | 
15 | @guppy
16 | def test(q: qubit) -> None:
17 |     apply_power(dagger_only, q)
   |                 ^^^^^^^^^^^ Expected function with unitary flags: `power`, got: `dagger`

Guppy compilation failed due to 1 previous error
